- fixed style of numeric input field because it breaks the options-dialog on mobile devices - An attempt to fix the timout of the auth cookie.

--- a/Memosport/wwwroot/less/main.less
+++ b/Memosport/wwwroot/less/main.less
@@ -2334,17 +2334,29 @@ textarea.ict-question-answer-text {
     }
 }
 
-#ict-options-dialog-container {
+#ict-options-dialog-container
+{
 
-    ul {
+    ul
+    {
         margin: @GlobalMargin 0px 0px 0px;
 
-        li {
+        li
+        {
             margin: 0px @GlobalMargin 0px 0px;
         }
 
-        li.col-1 {
+        li.col-1
+        {
             width: 150px;
+        }
+    }
+
+    label[for="IndexCardTrainerCustomQuantityMode"]
+    {
+        input[type="number"]
+        {
+            max-width: 50px;
         }
     }
 }
